syntax = "proto3";

package folderservice;

service FolderService {
  rpc GetFolderData(GetFolderDataRequest) returns (GetFolderDataResponse);
}

message GetFolderDataRequest {
  int64 folderId = 1;
}

message GetFolderDataResponse {
  int64 id = 1;
  string name = 2;
  int64 parentId = 3; // null если нет
  int64 userId = 4;
}